<resources>
    <string name="app_name">AutoMate</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="specialization_hint">Specialization</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="language">Language:</string>
    <string name="save">Save</string>
    <string name="help_and_support">Help and Support</string>
    <string name="already_nhave_an_naccount">Welcome \nto \nAutoMate!</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user_register_now">New user? Register Now</string>
    <string name="parts">Parts</string>
    <string name="parts_categories">Parts Categories</string>
    <string name="enter_the_your_email_to_reset_your_password">Enter Your Email to Reset Your Password!</string>
    <string name="send">Send</string>
    <string name="here_s_nyour_first_nstep_with_nus">Here’s\nyour first\nstep with \nus!</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="info">Info</string>
    <string name="email">Email:</string>
    <string name="location_prof">Location:</string>
    <string name="your_location">your location</string>
    <string name="phone">Phone:</string>
    <string name="specialization">Specialization:</string>
    <string name="manage_parts">Manage Parts</string>
    <string name="change_password">Change Password</string>
    <string name="scrap_yard">Scrap Yards</string>
    <string name="mechanics">Mechanics</string>
    <string name="diagnostics">Diagnostics</string>
    <string name="profile">Profile</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="searchMechanics">Search Mechanics…</string>
    <string name="searchParts">Search Parts…</string>
    <string name="search_scrap_yards">Search Scrap Yards…</string>
    <string name="part_details">Part Details</string>
    <string name="price">Price:</string>
    <string name="description">Description:</string>
    <string name="filter">Filter</string>
    <string name="make">Make:</string>
    <string name="model">Model:</string>
    <string name="year">Year:</string>
    <string name="category">Category:</string>
    <string name="subcategory">SubCategory:</string>
    <string name="condition">Condition:</string>
    <string name="negotiable">Negotiable</string>
    <string name="details">Details:</string>
    <string name="scrapyard_name">Scrapyard:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="clear_all">Clear all</string>
    <string name="nearest_location">Nearest Location</string>
    <string name="filtered_by_nearest_location_n">Filtered by Nearest Location\n</string>
    <string name="view_parts">View Parts</string>
    <string name="biography">Biography:</string>
    <string name="rate_me">Rate Me</string>
    <string name="add_image">Add Image</string>
    <string name="add_part">Add Part</string>
    <string name="addPrice">Price (USD)</string>
    <string name="add">Add</string>
    <string name="enter_old_pass">Old Password:</string>
    <string name="enter_new_pass">New Password:</string>
    <string name="enter_confirm_pass">Confirm new\npassword:</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="email_administrator_gmail_com">Email: administrator@gmail.com</string>
    <string name="phone_administrator">Phone: +96170123456</string>
    <string name="get_started">Get Started</string>
    <string name="get_started_body">You\'ve unlocked a 30-day free trial. After 30 days, your subscription will automatically switch to a paid plan for 10 USD per month.</string>
    <string name="get_started_title">Get Started with Your Free Trial!</string>
    <string name="upgrade_now">Upgrade Now</string>
    <string name="upgrade_now_body">Your subscription has expired and you can no longer access your account. Upgrade now to continue enjoying the full experience for only 10 USD per month.</string>
    <string name="upgrade_now_title">Your Subscription Has Ended!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm_save_title">Confirm Save</string>
    <string name="confirm_save_body">Are you sure you want to save?</string>
    <string name="logout_title">Logout</string>
    <string name="logout_body">Are you sure you want to logout?</string>
    <string name="payment">Payment Methods</string>
    <string name="omt">OMT</string>
    <string name="whish">WHISH</string>
    <string name="pay">Pay</string>
    <string name="subscription_payment_prompt_message_omt">To reactivate your account, please follow these steps:\n\n1. Visit the nearest OMT location.\n2. Provide the following details:\n   - Your ID\n   - First Name\n   - Last Name\n   - Amount: 10 USD\n3. Transfer the amount to this phone number: +96170123456.\n4. Collect the receipt after the transaction.\n5. Locate the LTN (Local Transfer Number) on the receipt. It\'s a 12-digit code.\n6. Open the app and Press the \'Pay\' button.\n7. Enter the following details:\n   - LTN\n   - First Name\n   - Last Name\n8. Your account will be unblocked upon successful completion.\n\nThank you for your cooperation.</string>
    <string name="subscription_payment_prompt_message_whish">To reactivate your account, please follow these steps:\n\n1. Visit the nearest WHISH location.\n2. Provide the following details:\n   - Your ID\n   - First Name\n   - Last Name\n   - Amount: 10 USD\n3. Transfer the amount to this phone number: +96170123456.\n4. Collect the receipt after the transaction.\n5. Locate the LTN (Local Transfer Number) on the receipt. It\'s a 12-digit code.\n6. Open the app and Press the \'Pay\' button.\n7. Enter the following details:\n   - LTN\n   - First Name\n   - Last Name\n8. Your account will be unblocked upon successful completion.\n\nThank you for your cooperation.</string>
    <string name="payment_details">Payment Details</string>
    <string name="ltn">LTN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="subscription_completed">Subscription Completed!</string>
    <string name="yearofxp">Years of Experience:</string>
    <string name="subscription">Subscription:</string>
    <string name="add_part_description">Description</string>
    <string name="import_car_s_diagnostics">Import Car\'s Diagnostics</string>
    <string name="day">Day:</string>
    <string name="month">Month:</string>
    <string name="car_data_year">Year:</string>
    <string name="hour">Hour:</string>
    <string name="status">Status:</string>
    <string name="connecting">Connecting...</string>
    <string name="downloading">Downloading...</string>
    <string name="file_saved">File received successfully!</string>
    <string name="select_a_picture">Select a Picture</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="error_occurred">File transfer failed. Please check the connection and try again.</string>
    <string name="delete_image">Delete Image!</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="def_bio">No Biography.</string>
    <string name="view_location">View Location</string>
    <string name="active_until">Active until</string>
    <string name="edit_part">Edit Part</string>
    <string name="enter_ip">IP Address (e.g., 192.168.118.25)</string>
    <string name="bluetooth_mac_address_e_g_8c_6a_3b_05_46_e4">Bluetooth MAC Address (e.g., 8C:6A:3B:05:46:E4)</string>
    <string name="report">Report</string>
    <string name="ok">OK</string>
    <string name="diagnostics_configuration">Diagnostics Configuration</string>
    <string name="this_feature_needs_pre_configuration_before_you_can_use_it_please_check_the_info_for_more_information">This feature needs pre configuration before you can use it. Please check the info for more information.</string>
    <string name="diagnostic_guide">
        "User Guide: Using the Diagnostic Feature in AutoMate\n\n
        To utilize the diagnostic feature of the AutoMate application, follow these steps. Ensure you have the necessary hardware:\n\n
        Required Hardware and Connections:\n
        1. \tOBD-II Scanner (ELM327): This device connects to your car's OBD-II port and communicates diagnostic data.\n
        2. \tRaspberry Pi: This device will interface with the OBD-II scanner to collect data.\n
        3. \tBluetooth: For wireless communication between the Raspberry Pi and your phone.\n\n
        Steps to Configure and Use the Diagnostic Feature:\n\n
        1. \tSetup and Configure Raspberry Pi:\n
        \t- Ensure your Raspberry Pi is powered and has Bluetooth enabled.\n
        \t- Install necessary scripts to retrieve data from the OBD-II scanner and to send data to your phone.\n\n
        2. \tConnect Raspberry Pi to OBD-II Scanner:\n
        \t- Plug the OBD-II scanner into your car's OBD-II port (usually located under the dashboard).\n
        \t- Pair the OBD-II scanner with the Raspberry Pi via Bluetooth.\n\n
        3. \tConfigure AutoMate App:\n
        \t- Open the AutoMate app on your phone.\n
        \t- Navigate to the Diagnostics fragment.\n
        \t- If this is your first time, the list will be empty.\n
        \t- Click the Info button to review the configuration instructions if needed.\n
        \t- Click the Import button to start the data import process.\n\n
        4. \tImport Diagnostic Data:\n
        \t- Upon successful connection, an alert will prompt you to choose the diagnostic data file.\n
        \t- Select the car_data.zip file. This file contains all the diagnostic reports retrieved from the Raspberry Pi.\n
        \t- Once the import is complete, the list in the Diagnostics fragment will be updated with the new reports.\n\n
        5. \tView Diagnostic Reports:\n
        \t- The diagnostic reports will be listed in the Diagnostics fragment.\n
        \t- You can filter the reports by year, month, day, and hour using the filter options.\n
        \t- Click on a report to view detailed information about the diagnostic data.\n\n
        By following these steps, you can successfully use the diagnostic feature in the AutoMate application, leveraging the OBD-II scanner and Raspberry Pi to obtain and view car diagnostic reports directly on your phone."
    </string>
    <string name="no_data_found">No Data Found!</string>
    <string name="enter_the_one_time_password_otp_received">Enter the One Time Password (OTP) Received</string>
    <string name="reset">Reset</string>
    <string name="reset_your_password">Reset Your Password</string>
    <string-array name="spinner">
        <item>Choose Your Account Type</item>
        <item>General User</item>
        <item>Mechanic</item>
        <item>Scrap-Yard Vendor</item>
    </string-array>
    <string-array name="Lang">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
</resources>