<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bk_color"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/part_change_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingStart="52dp"
        android:paddingTop="10dp"
        android:text="@string/change_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="32sp"
        android:paddingBottom="1dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_arrow9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_back_en"
        app:layout_constraintBottom_toBottomOf="@id/part_change_pass"
        app:layout_constraintStart_toStartOf="@id/part_change_pass"
        app:layout_constraintTop_toTopOf="@id/part_change_pass"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/enter_old_pass"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/part_change_pass" />

    <TextView
        android:id="@+id/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/enter_new_pass"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/old_pass" />

    <TextView
        android:id="@+id/confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:text="@string/enter_confirm_pass"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/new_pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@id/old_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_pass">

        <EditText
            android:id="@+id/old_pass_edit"
            style="@style/modifiedEditText"
            android:hint="@string/old_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@id/new_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_pass">

        <EditText
            android:id="@+id/new_pass_edit"
            style="@style/modifiedEditText"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:layout_marginEnd="30dp"
        app:layout_constraintBaseline_toBaselineOf="@id/confirm_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/new_pass">

        <EditText
            android:id="@+id/confirm_pass_edit"
            style="@style/modifiedEditText"
            android:hint="@string/confirm_new_password"
            android:inputType="textPassword"
            android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/change_pass"
        style="@style/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:text="@string/change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti3" />

</androidx.constraintlayout.widget.ConstraintLayout>