<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/loginViewsMargin"
    android:background="@drawable/rate_alert_dialog">

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:src="@drawable/card_giftcard" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="23dp"
            android:layout_marginEnd="@dimen/loginViewsMargin"
            android:text="@string/get_started_title"
            android:textColor="@color/darkTextColor"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/darkTextColor"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/get_started_body"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStarted"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/loginButton"
        android:text="@string/get_started"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/loginViewsMargin"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"/>

</LinearLayout>